--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-"Hello World" 
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+		
+		<script type="text/javascript" src="index.js"></script>
+		<link rel="stylesheet" type="text/css" href="index.css">
+		
+		<title>Winchestro</title>
+	</head>
+	<body>
+		<p>Ok we are getting somewhere</p>
+	</body>
+</html>
