--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		
-		<script type="text/javascript" src="index.js"></script>
 		<link rel="stylesheet" type="text/css" href="index.css">
+		<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
 		
 		<title>Winchestro</title>
 	</head>
 	<body>
-		<iframe frameborder="0" src="https://googledrive.com/host/0BwL4fDXcFzMoQTU0RElJcnV5Tnc/"></iframe>
+		<iframe frameborder="0" allowfullscreen src="https://googledrive.com/host/0BwL4fDXcFzMoQTU0RElJcnV5Tnc/"></iframe>
 	</body>
+	<script type="text/javascript" src="index.js"></script>
 </html>
