--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
 	</head>
 	<body>
 		<iframe frameborder="0" allowfullscreen src="https://googledrive.com/host/0BwL4fDXcFzMoQTU0RElJcnV5Tnc/"></iframe>
+		<script>
+			window.frames[0].postMessage(location.hash,"https://0aef5dff2e0646592c95fd3b4def70dc48268108.googledrive.com");
+			window.addEventListener("message",function(event){
+				if(event.origin === "https://0aef5dff2e0646592c95fd3b4def70dc48268108.googledrive.com"){
+					location.hash = event.data;
+				}
+			},false)
+		</script>
 	</body>
 </html>
