--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
 		<title>Winchestro</title>
 	</head>
 	<body>
-		<iframe frameborder="0" allowfullscreen src="https://googledrive.com/host/0BwL4fDXcFzMoQTU0RElJcnV5Tnc/"></iframe>
 		<script>
-			window.frames[0].contentWindow.postMessage(location.hash,"http://www.winchestro.com");
 			window.addEventListener("message",function(event){
-				if(event.origin === "https://0aef5dff2e0646592c95fd3b4def70dc48268108.googledrive.com"){
-					location.hash = event.data;
+					if(event.data){
+						location.hash = event.data;
+					}else{
+						event.source.postMessage(location.hash,event.origin)
+					}
+					
 				}
 			},false)
 		</script>
+		<iframe frameborder="0" allowfullscreen src="https://googledrive.com/host/0BwL4fDXcFzMoQTU0RElJcnV5Tnc/"></iframe>
+		
 	</body>
 </html>
