--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					if(history.length>1){
 						history.replaceState({},"",event.data);
 					}else{
-						history.pusheState({},"",event.data);
+						history.pushState({},"",event.data);
 					}
 				
 				}else{
