redirecting to grammarphone

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	</head>
 	<body>
 		<script>
+		window.location="http://www.winchestro.com/grammarphone/"
+		/*
 			window.addEventListener("message",function(event){
 				if(event.data){
 					if(history.length>1){
@@ -25,6 +27,7 @@
 					
 				
 			},false)
+*/
 		</script>
 		<!--<iframe frameborder="0" allowfullscreen src="https://googledrive.com/host/0BwL4fDXcFzMoQTU0RElJcnV5Tnc/"></iframe>-->
 		<iframe frameborder="0" allowfullscreen src="https://c7e5358856e08abe4de33271803960d5bab22f2d.googledrive.com/host/0BwL4fDXcFzMobVRWT1A5ZnRkcVU/index.html"></iframe>
